--- a/NEMESIS.ini
+++ b/NEMESIS.ini
@@ -9,14 +9,11 @@ Title=NEMESIS (Demo)
 Version=1.3 (fix verze)
 Authors=Darkenius
 Webpage=http://darkforests.info/forum
-Description={\rtf1\ansi\ansicpg1252\pard\qc\ansi\par Hrajete za kopáèe jménem \b Rabus\b0, který se snaží se svými pâáteli utéct z dolu, protože jim hrozí velké nebezpeèí. Dostanou se všichni bezpeènê z dolu ven? Èeká na Rabuse nêco víc než jen útêk? \par\par Další informace naleznete na \par http://darkforests.info/forum\par\par a \par http://forum.gothicz.net\par\par Credits: Fawkes a Auronen (AF Script Packet), Lehona (LeGo), Sektenspinner (Ikarus)}
+Description={\rtf1\ansi\ansicpg1252\pard\qc\ansi\par Hrajete za kopÃ¡Ã¨e jmÃ©nem \b Rabus\b0, kterÃ½ se snaÅ¾Ã­ se svÃ½mi pÃ¢Ã¡teli utÃ©ct z dolu, protoÅ¾e jim hrozÃ­ velkÃ© nebezpeÃ¨Ã­. Dostanou se vÅ¡ichni bezpeÃ¨nÃª z dolu ven? ÃˆekÃ¡ na Rabuse nÃªco vÃ­c neÅ¾ jen ÃºtÃªk? \par\par DalÅ¡Ã­ informace naleznete na \par http://darkforests.info/forum\par\par a \par http://forum.gothicz.net\par\par Credits: Fawkes a Auronen (AF Script Packet), Lehona (LeGo), Sektenspinner (Ikarus)}
 Icon=NEMESIS.bmp
 
 [FILES]
-VDF=NEMESIS_TEXTURES.mod  NEMESIS_TEXTURES2.mod  
-
-;NEMESIS_SCRIPTS.mod
-;NEMESIS_WORLDS.mod
+VDF=NEMESIS_TEXTURES.mod  NEMESIS_TEXTURES2.mod  NEMESIS_WORLDS.mod  NEMESIS_SCRIPTS.mod 
 
 
 
@@ -31,9 +28,7 @@ VisualEffects=System\VisualFx
 OutputUnits=OU
 
 [SETTINGS]
-World=NewWorld\NEWWORLD.ZEN
-;DarkWorld\SNOWWORLD.ZEN
-;DarkWorld\DARKABANDONEDMINE.ZEN
+World=DarkWorld\DARKABANDONEDMINE.ZEN
 Player=PC_Hero
 
 [OPTIONS]
